crates/jolt_java_fmt/tests/snapshots/corpus__style__modules__case_sensitive_sorting.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
module demo {
  requires A.lib;
  requires a.lib;
  requires z.lib;
}

diagnostics:
(none)
