crates/jolt_java_fmt/tests/snapshots/corpus__style__modules__comment_barrier.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
module demo {
  requires z.lib;

  // keep requires barrier
  requires a.lib;

  exports z.api;

  // keep exports barrier
  exports a.api;
}

diagnostics:
(none)
