crates/jolt_java_fmt/tests/snapshots/corpus__style__modules__directive_ordering.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
module demo {
  requires static transitive com.example.lib;
  requires java.sql;

  exports com.example.api;

  opens com.example.internal;

  uses com.example.Plugin;

  provides com.example.Plugin with com.example.impl.PluginImpl;
}

diagnostics:
(none)
