crates/jolt_java_fmt/tests/snapshots/corpus__style__modules__formatter_ignore_directives.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
module demo {
  requires beta;

  uses z.Service;

  // @formatter:off
  provides z.Service with b.Impl,a.Impl;
  opens   raw.pkg  to   x.y,z.y;
  // @formatter:on
  requires alpha;

  exports api;
}

diagnostics:
(none)
