crates/jolt_java_fmt/tests/snapshots/corpus__style__modules__formatter_ignore_unterminated_directives.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
module raw {
  requires alpha;

  // @formatter:off
  requires beta;
  // trailing comment owned by the unterminated region
}

diagnostics:
(none)
