crates/jolt_java_fmt/tests/snapshots/corpus__style__modules__qualified_names.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
open module com.example.app {
  requires java.base;

  exports com.example.api to z.Module, a.Module;

  provides com.example.Service with com.example.impl.ServiceImpl;
}

diagnostics:
(none)
