crates/jolt_java_fmt/tests/snapshots/corpus__style__modules__sorted_directive_comments.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
module demo {
  exports a.api; // a api
  exports z.api; // z api

  uses a.Service; // a service
  uses z.Service; // z service
}

diagnostics:
(none)
